tests/NormalTests/paczka1/fuzzy1/61530043.err
Error in line 6: A146 A862 59,9
Error in line 18: HNlgmp0v9F S432 19,2
Error in line 23: HNlgmp0v9F A146 52,9
Error in line 28: Jfli0KZi A862 10,0
